# gitlab-hook

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
cmake/: coverage.cmake  doxygen.cmake  help2man.cmake
debian/: CMakeLists.txt  changelog  control  copyright  gitlab-hook.service  rules
doc/: 01_introduction.md  CMakeLists.txt  doxyfile
src/: CMakeLists.txt  action_list.cpp  action_list.h  config.cpp  config.h  debug_hook.cpp  debug_hook.h  hook.cpp  hook.h  http_server.cpp  http_server.h  io_context.cpp  io_context.h  log.cpp  log.h  main.cpp  pipeline_hook.cpp  pipeline_hook.h  process.cpp  process.h  signal_listener.cpp  signal_listener.h  user_group.cpp  user_group.h  watchdog.cpp  watchdog.h
test/: CMakeLists.txt  config.ini  curl.sh  pipeline_event.json  script.sh  test_gitlab_hook.cpp  test_main.cpp
test/cert/: cert.cfg  cert.pem  generate.sh  key.pem
